--- a/public_projects/COVID_Emails/css/bubble_chart.css
+++ b/public_projects/COVID_Emails/css/bubble_chart.css
@@ -6,7 +6,7 @@ html {
 
 div:empty { display: none }
 
-a, a:visited, a:active {
+a, a:active, a:visited {
   /* color: #444; */
   text-decoration: none;
   font-weight: bold;
@@ -147,6 +147,10 @@ blockquote:after {
 .button.active {
   background: #000;
   color: #fff;
+}
+
+.bar-text {
+  pointer-events: none;
 }
 
 
